--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "vercel-build": "npm install --production=false --legacy-peer-deps && next build",
     "dev": "next dev --turbopack",
     "build": "npm install --legacy-peer-deps && next build",
     "start": "next start",
@@ -49,10 +50,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "^20.17.46",
     "@types/papaparse": "^5.3.16",
+    "@types/react": "^19.1.3",
     "@types/react-dom": "^19",
     "eslint": "^9.26.0",
     "eslint-config-next": "15.3.1",
-    "tw-animate-css": "^1.2.9"
+    "tw-animate-css": "^1.2.9",
+    "typescript": "^5.8.3"
   }
 }
