--- a/package.json
+++ b/package.json
@@ -41,8 +41,6 @@
     "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
     "qr": "^0.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
@@ -50,7 +48,9 @@
     "@eslint/eslintrc": "^3",
     "@types/react-dom": "^19",
     "eslint": "^9.26.0",
-    "eslint-config-next": "15.3.1"
+    "eslint-config-next": "15.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
