--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@eslint/eslintrc": "^3",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.2.2",
@@ -22,14 +23,15 @@
     "@reown/appkit-adapter-wagmi": "^1.7.4",
     "@tailwindcss/postcss": "^4.1.4",
     "@tanstack/react-query": "^5.75.5",
-    "@types/node": "^20.17.46",
     "@types/papaparse": "^5.3.16",
-    "@types/react": "^19.1.3",
+    "@types/react-dom": "^19",
     "@wagmi/connectors": "^5.8.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "15.3.1",
     "ethers": "^6.14.0",
     "framer-motion": "^12.9.2",
     "keccak256": "^1.0.6",
@@ -41,16 +43,11 @@
     "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
     "qr": "^0.4.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
-    "typescript": "^5.8.3",
-    "wagmi": "^2.15.2",
-    "@eslint/eslintrc": "^3",
-    "@types/react-dom": "^19",
-    "eslint": "^9.26.0",
-    "eslint-config-next": "15.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "wagmi": "^2.15.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
