--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-dom": "^18.2.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
-    "wagmi": "^2.15.2"
+    "wagmi": "^2.15.2",
+    "@types/react": "^19.1.3",
+    "@types/node": "^20.17.46"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -59,5 +61,8 @@
     "eslint-config-next": "15.3.1",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": ">=18.17"
   }
 }
