--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-dom": "^18.2.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
-    "wagmi": "^2.15.2"
+    "wagmi": "^2.15.2",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -59,7 +60,7 @@
     "eslint": "^9.26.0",
     "eslint-config-next": "15.3.1",
     "tw-animate-css": "^1.2.9",
-    "typescript": "^5.8.3"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.17"
